Fix PropertyGroup baseline alignment

--- a/src/components/PropertyGroup/PropertyGroup.css
+++ b/src/components/PropertyGroup/PropertyGroup.css
@@ -4,9 +4,8 @@
   --lineHeight: 24px;
   --lineThroughTop: calc(var(--lineHeight) - 7px);
   --lineThroughBottom: calc(var(--lineHeight) - 6px);
-  --lineHeightMobile: 20px;
-  --lineThroughTopMobile: calc(var(--lineHeightMobile) - 5px);
-  --lineThroughBottomMobile: calc(var(--lineHeightMobile) - 4px);
+  --lineThroughTopMobile: calc(var(--lineHeight) - 9px);
+  --lineThroughBottomMobile: calc(var(--lineHeight) - 8px);
 }
 
 .root {
@@ -22,7 +21,7 @@
 .item {
   display: flex;
   align-items: center;
-  padding: 2px 0;
+  padding: 3px 0;
 
   @media (--viewportMedium) {
     padding: 4px 0;
